actualizo meta tags

--- a/desafios/peliculas/index.html
+++ b/desafios/peliculas/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Film | Bad Sister</title>
   <link rel="stylesheet" href="./styles.css">
-  <link rel="shortcut icon" href="./img/minitor.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="https://img.icons8.com/ios-filled/32/mac-os.png" type="image/png">
   <meta name="description"
-  content="Bienvenidos a mi practica con HTML5, CSS3 y JavaScript, haciendo una presentacion de Bad Sisters.">
+  content="Bienvenidos a mi practica con HTML5, CSS3 y JavaScript, haciendo una presentacion de la pelicula Bad Sisters, basada en la página de Apple+TV.">
   <link rel="favicon" href="https://img.icons8.com/ios-filled/32/mac-os.png">
   <link rel="apple-touch-icon" href="https://img.icons8.com/ios-filled/64/mac-os.png">
   <meta name="theme-color" content="#2d2d2d">
+  <meta name="author" content="María Eugenia Costa" />
   <meta name="twitter:card" content="summary">
   <meta property="og:type" content="website">
   <meta property="og:title" name="twitter:title" content="Film | Bad Sister">
-  <meta property="og:description" name="twitter:description"
-    content="Bienvenidos a mi practica con HTML5, CSS3 y JavaScript, haciendo una presentacion de Bad Sisters.">
-  <meta property="og:image" name="twitter:image"
+  <meta property="og:description" 
+    name="twitter:description"
+    content="Bienvenidos a mi practica con HTML5, CSS3 y JavaScript, haciendo una presentacion de la pelicula Bad Sisters, basada en la página de Apple+TV.">
+  <meta property="og:image" 
+    name="twitter:image"
     content="https://eugenia1984.github.io/desarrollo-front-end-html-css-javascript/desafios/peliculas/assets/hero/sisters.jpg">
-  <meta property="og:url" name="twitter:url"
+  <meta property="og:url" 
+    name="twitter:url"
     content="https://eugenia1984.github.io/desarrollo-front-end-html-css-javascript/desafios/peliculas/">
 </head>
-
 <body>
   <header>
     <h1>Apple TV+</h1>
@@ -115,7 +117,7 @@
               <a href="https://tv.apple.com/us/person/anne-marie-duff/umc.cpc.3grn7qwf4qc4fa4h45eknkjwa"
                 target="_blank">
                 <div class="profile-img">
-                  <img src="./assets/cast/anne-marie-duff.webp" alt="Sharon Horgan" />
+                  <img src="./assets/cast/anne-marie-duff.webp" alt="Anne-Marie Duff" />
                 </div>
                 <div class="profile-detail">
                   <p class="title">Anne-Marie Duff</p>
@@ -127,7 +129,7 @@
             <li class="cast-list-item">
               <a href="https://tv.apple.com/us/person/claes-bang/umc.cpc.64lmgn0e6q0obe7hjgrvsq1xk" target="_blank">
                 <div class="profile-img">
-                  <img src="./assets/cast/claes-bang.webp" alt="Sharon Horgan" />
+                  <img src="./assets/cast/claes-bang.webp" alt="Claes Bang" />
                 </div>
                 <div class="profile-detail">
                   <p class="title">Claes Bang</p>
@@ -248,8 +250,11 @@
         </div>
         <div>
           <button id="prevBtn">
-            < </button>
-              <button id="nextBtn">></button>
+            < 
+          </button>
+          <button id="nextBtn">
+            >
+          </button>
         </div>
       </section>
     </section>
@@ -502,5 +507,4 @@
   </footer>
   <script src="./script.js"></script>
 </body>
-
 </html>
